fix package_dir conf in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,8 @@ classifiers =
     Topic :: Text Processing :: Markup :: HTML
 
 [options]
-package_dir = src
+package_dir =
+    =src
 packages = find:
 python_requires = >=3.6
 
