add version to recipy:__init__ and reverence it in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = recipy-emilylockhart
-version = 0.0.1
+version = attr: recipy.VERSION
 author = Emily Lockhart
 author_email = emilylockhart@protonmail.com
 description = Scrape recipes to YAML. Supports Hello Fresh.
